<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityForgotPassword">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerline3"
        android:layout_centerInParent="true">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerline3"
        android:layout_marginBottom="120dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textSize="35sp"
            android:fontFamily="@font/arvoregular"
            android:textColor="@color/black"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/here"
            android:textSize="23sp"
            android:fontFamily="@font/arvoregular"
            android:textColor="@color/black">

        </TextView>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerline3"
        android:id="@+id/forgotpassword"
        android:hint="@string/register"
        android:layout_marginBottom="10dp">

    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recover"
        android:layout_centerHorizontal="true"
        android:id="@+id/passwordrecoverbutton"
        android:layout_below="@id/centerline3"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

    </Button>


    <TextView
        android:id="@+id/gobacktologin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="221dp"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp">

    </TextView>


</RelativeLayout>