<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivitySignup">

    <!-- Centered title section -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerline2"
        android:layout_centerInParent="true">
    </RelativeLayout>

    <!-- User information text section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerline2"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">

        <!-- Title text -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="42sp"
            android:fontFamily="@font/arvobolditalic"
            android:textColor="@color/burly_wood" />

        <!-- Subtitle text -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nice"
            android:textColor="@color/burly_wood" />
    </LinearLayout>

    <!-- Email input field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/centerline2"
        android:layout_marginBottom="10dp"
        android:id="@+id/email"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signupemail"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password input field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="10dp"
        android:id="@+id/password"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signuppassword"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Sign-Up Button -->
    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/teal"
        android:text="@string/sign"
        android:textColor="@color/white" />

    <!-- Login Text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/want"
        android:textColor="@color/teal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/signup"
        android:id="@+id/gotologin"
        android:layout_marginTop="70dp" />
</RelativeLayout>
